2006-07-26  Steve Hall  <digitect@mindspring.org>
	* windows/nsis/gramps-build.bat: Add windows building scripts.
	* windows/nsis/gramps.nsi: Add windows building scripts.
	* windows/nsis/gcheck.py: Add windows building scripts.
	* windows/nsis/ped24.ico: Add windows icon.

2006-07-26  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Remove debian/Makefile from the list.
	* Makefile.am (SUBDIRS): Remove debian from the list.
	* debian/Makefile.am: Remove from SVN.

2006-07-25  Brian Matherly  <brian@gramps-project.org>
	* src/Mime/Makefile.am: Add WinMime.py
	* src/ReportBase/_ReportUtils.py: fix born_str typo (bug #266)

2006-07-25  Alex Roitman  <shura@gramps-project.org>
	* src/Merge/_MergePerson.py: Use new child_ref API.
	* src/FilterEditor/_EditRule.py (MySelect.get_text): Dirty hack to
	prevent rule editor from crashing. NEEDS REPAIR to stop relying on
	the localized text.
	* src/Filters/Rules/Person/_HasFamilyEvent.py (apply): Use new API.
	* src/RelLib/_GrampsType.py (set,__cmp__): Consider unicode type
	along with the str.
	* src/Filters/_SearchBar.py (get_value,apply_filter): Force unicode.
	* src/Filters/_PersonSidebarFilter.py (get_filter): Force unicode.
	* src/Filters/_FamilySidebarFilter.py (get_filter): Force unicode.

2006-07-24  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Bump up the version number.
	* src/GrampsDb/_GrampsBSDDB.py (find_fidmap): Remove unused method.

2006-07-24  Manfred Paulus  <manfred.paulus@gmx.de>
	* src/plugins/FanChart.py: Add circle, 1/2 circle and 1/4
	circle options, along with selectable generations
	* src/docgen/OpenOfficeDoc.py: fix rotation angle

2006-07-24  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Map "Other
	Name" from gramps2.0.x to the "Unknown" name type;
	work out the case of no events.
	* src/GrampsDb/_ReadXML.py (start_name): Map "Other Name" from
	gramps2.0.x to the "Unknown" name type.